--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "req-booking",
-  "version": "1.5.1",
-  "description": "A Booking App for requesting a booking for a class for meetings or conducting an event.",
+  "version": "0.7.2",
+  "description": "A Booking App for requesting a booking for a class for meetings or conducting an event, which intimates the user via a mail",
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
