--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"uuid": "^9.0.0"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node server.js"
 	},
 	"author": "Aditya Pandey",
 	"license": "ISC"
